Fixed menu text overflow in lower res

--- a/garrysmod/html/css/menu/PageOptions.css
+++ b/garrysmod/html/css/menu/PageOptions.css
@@ -77,9 +77,8 @@ DIV.page DIV.options A.active:hover
 {
 	DIV.page DIV.options
 	{
-		width: 150px;
+		width: 250px;
 		font-size: 70%;
-		padding-left: 5px;
 	}
 	
 	DIV.page DIV.innerpage
